infrastructure/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "${infranamespaceprefix}grafana"
  labels:
    name: "${infranamespaceprefix}grafana"
