infrastructure/grafana/virtualservice-grafana.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: ${infranamespaceprefix}grafana
spec:
  gateways:
  - ${infranamespaceprefix}istio-ingress/pauwelslabs-com
  hosts:
  - dashboards.pauwelslabs.com
  http:
  - name: grafana
    route:
    - destination:
        host: grafana
        port:
          number: 3000
